[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/background_plain.png" type="Texture" id=1]
[ext_resource path="res://scripts/Online_Lobby.gd" type="Script" id=2]
[ext_resource path="res://themes/custom_theme.tres" type="Theme" id=3]
[ext_resource path="res://sounds/BoxCat-Games-Epic-Song.mp3" type="AudioStream" id=4]

[node name="online_lobby" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="other_lobbies_list" type="ItemList" parent="."]
margin_left = 1012.0
margin_top = 266.0
margin_right = 1739.0
margin_bottom = 660.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="players_in_lobby_list" type="ItemList" parent="."]
margin_left = 122.0
margin_top = 266.0
margin_right = 849.0
margin_bottom = 660.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_lobby_lbl" type="Label" parent="."]
margin_left = 122.0
margin_top = 102.0
margin_right = 363.0
margin_bottom = 142.0
theme = ExtResource( 3 )
text = "Current lobby:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="players_in_lobby_lbl" type="Label" parent="."]
margin_left = 122.0
margin_top = 204.0
margin_right = 375.0
margin_bottom = 233.0
theme = ExtResource( 3 )
text = "Players in lobby:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_lobby_text" type="Label" parent="."]
margin_left = 404.0
margin_top = 102.0
margin_right = 680.0
margin_bottom = 146.0
theme = ExtResource( 3 )
text = "Not in a lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="other_lobbies_table_lbl" type="Label" parent="."]
margin_left = 1012.0
margin_top = 204.0
margin_right = 1284.0
margin_bottom = 233.0
theme = ExtResource( 3 )
text = "Other lobbies:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create_lobby_btn" type="Button" parent="."]
margin_left = 308.0
margin_top = 725.0
margin_right = 631.0
margin_bottom = 778.0
theme = ExtResource( 3 )
text = "Create Lobby"

[node name="join_to_lobby_btn" type="Button" parent="."]
margin_left = 1221.0
margin_top = 725.0
margin_right = 1544.0
margin_bottom = 778.0
theme = ExtResource( 3 )
text = "Join to lobby"

[node name="play_btn" type="Button" parent="."]
margin_left = 776.0
margin_top = 868.0
margin_right = 1099.0
margin_bottom = 921.0
theme = ExtResource( 3 )
text = "Play"

[node name="back_btn" type="Button" parent="."]
margin_left = 776.0
margin_top = 958.0
margin_right = 1099.0
margin_bottom = 1011.0
theme = ExtResource( 3 )
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="item_selected" from="other_lobbies_list" to="." method="_on_other_lobbies_list_item_selected"]
[connection signal="nothing_selected" from="other_lobbies_list" to="." method="_on_other_lobbies_list_nothing_selected"]
[connection signal="pressed" from="create_lobby_btn" to="." method="_on_create_join_lobby_btn_pressed"]
[connection signal="pressed" from="join_to_lobby_btn" to="." method="_on_join_to_lobby_btn_pressed"]
[connection signal="pressed" from="play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="back_btn" to="." method="_on_back_btn_pressed"]
